--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "eslint": "^7.32.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
     "react-scripts": "^4.0.3",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
   },
