--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^4.0.3",
     "react-use": "^17.4.0",
+    "sass": "^1.53.0",
     "styled-components": "^5.3.5",
+    "swiper": "^8.2.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
